add dates to experiance section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <main>
 
     <!-- Intro Section -->
-    <section id="intro" class="section scrollspy full-height">
+    <header id="intro" class="section scrollspy full-height">
       <div class="overlay">
           <!-- Hidden for Tablet and Below -->
           <div class="container hide-on-med-and-down">
@@ -83,7 +83,7 @@
             </div>
           </div>
       </div>
-    </section>
+    </header>
 
     <!-- About Section -->
     <section id="about" class="section scrollspy">
@@ -106,7 +106,7 @@
             <!-- Skills (Junior Full-Stack Developer) Languages Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Languages</h4>
+                    <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Languages</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -166,7 +166,7 @@
             <!-- Skills (Junior Full-Stack Developer) Database Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Database</h4>
+                    <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Database</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -202,7 +202,7 @@
             <!-- Skills (Junior Full-Stack Developer) Data Visulization Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Data Visulization</h4>
+                    <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Data Visulization</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -254,7 +254,7 @@
             <!-- Skills (Junior Full-Stack Developer) Frameworks Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Frameworks</h4>
+                    <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Frameworks</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -314,7 +314,7 @@
             <!-- Skills (Junior Full-Stack Developer) Other Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Other</h4>
+                    <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Other</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -423,7 +423,7 @@
             <!-- Skills (IT Consultant) CA Technologies Section -->
             <li>
               <div class="collapsible-header">
-                <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>CA Technologies</h4>
+                <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>CA Technologies</h4>
               </div>
                 <div class="card collapsible-body">
                   <div class="card-content">
@@ -467,7 +467,7 @@
              <!-- Skills (IT Consultant) EPV Technologies Section -->
             <li>
               <div class="collapsible-header">
-                <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>EPV Technologies</h4>
+                <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>EPV Technologies</h4>
               </div>
                 <div class="card collapsible-body">
                   <div class="card-content">
@@ -527,7 +527,7 @@
             <!-- Skills (IT Consultant) IBM Software Section -->
             <li>
               <div class="collapsible-header">
-                <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>IBM Software</h4>
+                <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>IBM Software</h4>
               </div>
                 <div class="card collapsible-body">
                   <div class="card-content">
@@ -642,7 +642,7 @@
             <!-- Skills (IT Consultant) IBM Hardware Section -->
             <li>
               <div class="collapsible-header">
-                <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>IBM Hardware</h4>
+                <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>IBM Hardware</h4>
               </div>
                 <div class="card collapsible-body">
                   <div class="card-content">
@@ -702,7 +702,7 @@
             <!-- Skills (IT Consultant) Other Section -->
             <li>
               <div class="collapsible-header">
-                <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Other</h4>
+                <h4 class="waterfall-text light"><i class="mdi mdi-chevron-up-circle cyan-text"></i>Other</h4>
               </div>
                 <div class="card collapsible-body">
                   <div class="card-content">
@@ -990,11 +990,13 @@
     <!-- Experiance Section -->
     <section id="experience" class="section scrollspy">
         <h3 class="page-title white-text"><i class="mdi mdi-elephant grey-text"></i>&nbsp; Experience</h3>
-          <div class="container">
+        <div class="container">
             <ul class="collapsible" data-collapsible="accordion">
+                <li>
               <li>
                 <div class="collapsible-header">
-                  <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>Full-Stack Web Developer (Training)</h4>
+                  <h4 class="waterfall-text light left-align"><span class="exp-date">2018-2019</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
+                  Full-Stack Web Developer (Training)</h4>
                 </div>
                   <div class="card collapsible-body">
                     <div class="card-content">
@@ -1005,7 +1007,7 @@
                         class="responsive-img center-block"></a>
                       </div>
                     </div>
-                    <div class="role waterfall-text">Full-Stack Software Developer (Training)</div>
+                    <div class="role waterfall-text light">Full-Stack Software Developer (Training)</div>
                     <p><em class="grey-text">The Full stack Web Developer course is a university accredited diploma.</em></p>
                     <ul>
                     <li>Agile Development, Data Analytics, Data Management, Frameworks, Html5, Css3, GitHub, JavaScript, MongoDB, Python (Django Framework)</li>
@@ -1016,10 +1018,13 @@
                     <div class="card-action"><span> Mar 2018 - Jun 2019 &nbsp; Code Institue, &nbsp; Dublin, Ireland</span></div>
                   </div>
               </li>
+          </li>
+
               <!-- Euroclear card -->
               <li>
                 <div class="collapsible-header">
-                  <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>Capacity Management Infrastructure Consultant</h4>
+                  <h4 class="waterfall-text light left-align"><span class="exp-date">2009-2017</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
+                  Capacity Management Infrastructure Consultant</h4>
                 </div>
                   <div class="card collapsible-body">
                     <div class="card-content">
@@ -1049,7 +1054,8 @@
             <!-- Cpt global card -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>Performance Tuning Technical Consultant</h4>
+                    <h4 class="waterfall-text light left-align"><span class="exp-date">2008-2008</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
+                    Performance Tuning Technical Consultant</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1076,7 +1082,8 @@
             <!-- JPmorgan card -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>IT Capacity Planning / Performance Management Specialist</h4>
+                    <h4 class="waterfall-text light left-align"><span class="exp-date">2000-2008</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
+                    IT Capacity Planning / Performance Management Specialist</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1111,7 +1118,8 @@
             <!-- Chase card -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>Senior Operations / Operations Analyst</h4>
+                    <h4 class="waterfall-text light left-align"><span class="exp-date">1989-2000</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
+                    Senior Operations / Operations Analyst</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1139,8 +1147,8 @@
             <!-- Council card -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text">
-                    </i>Operations Analyst / Shift Leader / Operator / Trainee Operator</h4>
+                    <h4 class="waterfall-text light left-align"><span class="exp-date">1979-1989</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
+                    Operations Analyst / Shift Leader / Operator / Trainee Operator</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1152,9 +1160,11 @@
                         <div class="role waterfall-text">Operations Analyst / Shift Leader / Operator / Trainee Operator</div>
                         <p><em class="grey-text">Kingston & Sutton councils had a joint computer center to share IT services. </em></p>
                     </div>
-                    <div class="card-action"><span>Sep 1979 - Aug 1989 &nbsp; Kingston & Sutton Joint Computer Center &nbsp; Worcester Park, Uk</span></div>
+                    <div class="card-action"><span>Sep 1979 - Aug 1989&nbsp;Kingston & Sutton Joint Computer Center&nbsp;Worcester Park, Uk</span></div>
                 </div>
             </li>
+        </ul>
+    </div>
     </section>
 
       <!-- Education Section -->
