Responsive issues with experiance section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
     </nav>
 
     <!-- Hidden for Desktop only -->
-    <nav class="hide-on-large only trigger z-depth-1"><a aria-label="Mobile navbar" href="#" data-activates="slide-out"
-         class="button-collapse"><i class="mdi mdi-menu"></i></a>
-      <div class="name-title"><a id="name" aria-label="Navigate to the top of page" href="#"
-           class="teal-text">Paul Bennett</a><span class="brown-text light">Full-Stack Developer / IT Consultant</span>
+    <nav class="hide-on-large only trigger z-depth-1">
+        <a aria-label="Mobile navbar" href="#" data-activates="slide-out" class="button-collapse"><i class="mdi mdi-menu"></i></a>
+      <div class="name-title">
+        <a id="name" aria-label="Navigate to the top of page" href="#" class="teal-text">Paul Bennett</a>
+        <span class="brown-text light">Junior Full-Stack Developer / IT Consultant</span>
       </div>
     </nav>
 
@@ -996,7 +997,7 @@
               <li>
                 <div class="collapsible-header">
                   <h4 class="waterfall-text light left-align"><span class="exp-date">2018-2019</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
-                  Full-Stack Web Developer (Training)</h4>
+                  <span class="exp-header">Full-Stack Web Developer (Training)</span></h4>
                 </div>
                   <div class="card collapsible-body">
                     <div class="card-content">
@@ -1024,7 +1025,7 @@
               <li>
                 <div class="collapsible-header">
                   <h4 class="waterfall-text light left-align"><span class="exp-date">2009-2017</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
-                  Capacity Management Infrastructure Consultant</h4>
+                  <span class="exp-header">Capacity Management Infrastructure Consultant</span></h4>
                 </div>
                   <div class="card collapsible-body">
                     <div class="card-content">
@@ -1055,7 +1056,7 @@
             <li>
                 <div class="collapsible-header">
                     <h4 class="waterfall-text light left-align"><span class="exp-date">2008-2008</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
-                    Performance Tuning Technical Consultant</h4>
+                    <span class="exp-header">Performance Tuning Technical Consultant</span></h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1083,7 +1084,7 @@
             <li>
                 <div class="collapsible-header">
                     <h4 class="waterfall-text light left-align"><span class="exp-date">2000-2008</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
-                    IT Capacity Planning / Performance Management Specialist</h4>
+                    <span class="exp-header">IT Capacity Planning / Performance Management Specialist</span></h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1119,7 +1120,7 @@
             <li>
                 <div class="collapsible-header">
                     <h4 class="waterfall-text light left-align"><span class="exp-date">1989-2000</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
-                    Senior Operations / Operations Analyst</h4>
+                    <span class="exp-header">Senior Operations / Operations Analyst</span></h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1148,7 +1149,7 @@
             <li>
                 <div class="collapsible-header">
                     <h4 class="waterfall-text light left-align"><span class="exp-date">1979-1989</span><i class="mdi mdi-chevron-up-circle grey-text"></i>
-                    Operations Analyst / Shift Leader / Operator / Trainee Operator</h4>
+                    <span class="exp-header">Operations Analyst / Shift Leader / Operator / Trainee Operator</span></h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
