amend href for cv's

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             class="waves-effect waves-dark orange-text"><i class="mdi mdi-school small"> </i><span> Education </span></a></li>
         <li class="bold"><a aria-label="Go to Contact section" href="#contact"
             class="waves-effect waves-dark moss-text text-lighten-1"><i class="mdi mdi-contact-mail small"> </i><span> Contact </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv long" href="https://drive.google.com/open?id=1u3H7dH4r9Eb-xjVMB5Wz15K5k8wt25wqb65RsgAtz5w" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv long" href="https://docs.google.com/document/d/1Hb1kjz5SLEjDtfbXfmrqX71EviDz3p9BoSXBcE0t_Qg" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv (Long) </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv short" href="https://drive.google.com/open?id=1lsMYKcXcoZAp41nYOLJ4ZYY01U2W9I7x6ORqFsihTNE" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv short" href="https://docs.google.com/document/d/1amn5R7lpVAL0zJqgoh5wb6_RoC5CpDXvJPqlmSXxCaY" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv (Short) </span></a></li>
       </ul>
     </nav>
