--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </blockquote>
           <p>I have worked my whole career in IT and started working on IBM Mainframes in the 1980's as a Trainee Computer operator back in the days when paper tape & punched cards were used !!</p>
           <p>I have followed a career path through Computer operations to my last contract role in Brussels which ended in 2017</p>
-          <p>I then decided at looking to boost my skills portfolio and decided to enroll in Code Institude's <i>Diploma In Software Development</i> which I completed in June 2019 and was awared a grade of <strong>First Class Honours</strong>, It was lots of hard work and determination to complete the course as its online so you have to be disciplined in order to complete in the timeframe allowed.</p>
+          <p>I then decided at looking to boost my skills portfolio and enrolled in Code Institude's <i>Diploma In Software Development</i> which I completed in June 2019 and was awared a grade of <strong>First Class Honours</strong>, It was lots of hard work and determination to complete the course as its online so you have to be disciplined in order to complete in the time frame allowed.</p>
       </div>
     </section>
 
