changes to about me section

--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
       <h3 class="page-title white-text"><i class="mdi mdi-human-handsup pink-text"></i>&nbsp; About Me</h3>
       <div class="container flow-text">
           <blockquote>
-            <h2>An experienced and flexible IT Professional, with substantial background in IT and now diving into the pond of Web development.</h2>
+            <h2>An experienced and flexible IT Professional, with a substantial background in IT and now branching out into Web development.</h2>
           </blockquote>
           <p>I have worked my whole career in IT and started working on IBM Mainframes in the 1980's as a Trainee Computer operator back in the days when paper tape & punched cards were used !!</p>
-          <p>I have followed a career path through Computer operations to my last contract role in Brussels which ended in 2017</p>
-          <p>I then decided at looking to boost my skills portfolio and enrolled in Code Institude's <i>Diploma In Software Development</i> which I completed in June 2019 and was awared a grade of <strong>First Class Honours</strong>, It was lots of hard work and determination to complete the course as its online so you have to be disciplined in order to complete in the time frame allowed.</p>
+          <p>I followed a career path through Computer Operations to my last consultant role in Brussels which finished in 2017.</p>
+          <p>I thought it was then a good opportunity to add some additional skills to my portfolio, So in March 2018 I enrolled in Code Institude's <i>"Diploma In Software Development"</i> which I completed in June 2019 and was awared a grade of <i>"First Class Honours"</i>. 
+          <p>It was lots of hard work and determination to complete the course as its online so you have to be disciplined in order to complete in the time frame allowed.</p>
       </div>
     </section>
 
