Update Courses in CV's and add React to framework section

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             class="waves-effect waves-dark orange-text"><i class="mdi mdi-school small"> </i><span> Education </span></a></li>
         <li class="bold"><a aria-label="Go to Contact section" href="#contact"
             class="waves-effect waves-dark moss-text"><i class="mdi mdi-contact-mail small"> </i><span> Contact </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv long" href="https://drive.google.com/file/d/1HtgfcPafZ7RLke8QABFwgEoxr7d22R3R" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv (IT)" href="https://drive.google.com/file/d/1HtgfcPafZ7RLke8QABFwgEoxr7d22R3R" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv (IT) </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv short" href="https://drive.google.com/file/d/1sRz6wMz_AN8iVE6HA5HTC4F14kJ8Xf4f" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv (Web)" href="https://drive.google.com/file/d/1sRz6wMz_AN8iVE6HA5HTC4F14kJ8Xf4f" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv (Web) </span></a></li>
       </ul>
     </nav>
@@ -63,9 +63,9 @@
             class="waves-effect waves-dark orange-text"><i class="mdi mdi-school small"> </i><span> Education </span></a></li>
         <li class="bold"><a aria-label="Go to Contact section" href="#contact"
             class="waves-effect waves-dark moss-text text-lighten-1"><i class="mdi mdi-contact-mail small"> </i><span> Contact </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv long" href="https://drive.google.com/file/d/1HtgfcPafZ7RLke8QABFwgEoxr7d22R3R" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv (IT)" href="https://drive.google.com/file/d/1HtgfcPafZ7RLke8QABFwgEoxr7d22R3R" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv (IT) </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv short" href="https://drive.google.com/file/d/1sRz6wMz_AN8iVE6HA5HTC4F14kJ8Xf4f" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv (Web)" href="https://drive.google.com/file/d/1sRz6wMz_AN8iVE6HA5HTC4F14kJ8Xf4f" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv (Web) </span></a></li>
       </ul>
     </nav>
@@ -301,14 +301,6 @@
                                 <div class="skills-text">Jinga2</div>
                                 <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
                             </div>
-                            <!-- JQUERY -->
-                            <div class="col s6 m4 l2">
-                                <a href="https://jquery.com/">
-                                    <img alt="" src="static/images/jquery.png" class="responsive-img"></img>
-                                </a>
-                                <div class="skills-text">Jquery</div>
-                                <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                            </div>
                             <!-- MATERIALIZE -->
                             <div class="col s6 m4 l2 skills-icon">
                                 <a href="https://materializecss.com/">
@@ -317,6 +309,14 @@
                                 <div class="skills-text">Materialize</div>
                                 <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
                             </div>
+                            <!-- REACT -->
+                            <div class="col s6 m4 l2">
+                              <a href="https://reactjs.org/">
+                                  <img alt="" src="static/images/react.png" class="responsive-img"></img>
+                              </a>
+                              <div class="skills-text">React</div>
+                              <div class="exp-text">Beginner<br>&nbsp;<1 Year</div>
+                          </div>
                         </div>
                     </div>
                 </div>
