--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="container hide-on-med-and-down">
             <div class="intro-text-background">
               <h2 class="name">Paul Bennett</h2>
-              <p class="title">IT Consultant</p>
+              <p class="title">IT Professional</p>
             </div>
           </div>
       </div>
@@ -1259,7 +1259,7 @@
         <h3 class="page-title white-text"><i class="mdi mdi-contact-mail moss-text"></i>&nbsp; Contact</h3>
         <div class="container center-align">
             <div class="col s12">
-              <a aria-label="View on LinkedIn" href="mailto:paul.e.bennett@icloud.com" target="_blank" data-position="top" data-tooltip="Email me"
+              <a aria-label="Email me" href="mailto:paul.e.bennett@icloud.com" target="_blank" data-position="top" data-tooltip="Email me"
                  class="btn-footer btn-floating btn-large tooltipped"><i class="fas fa-envelope-square"></i></a>
               <a aria-label="View on GitHub" href="https://github.com/bennettpe" target="_blank" data-position="top" data-tooltip="View on GitHub"
                  class="btn-footer btn-floating btn-large tooltipped"><i class="fab fa-github-square"></i></a>
