--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             class="waves-effect waves-dark orange-text"><i class="mdi mdi-school small"> </i><span> Education </span></a></li>
         <li class="bold"><a aria-label="Go to Contact section" href="#contact"
             class="waves-effect waves-dark moss-text"><i class="mdi mdi-contact-mail small"> </i><span> Contact </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv" href="https://drive.google.com/file/d/1xasN6Mhc98tWZu9RY4hlfUqojtOGqYab/view?usp=sharing" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv" href="https://drive.google.com/file/d/15D7sfsVCK_siykFnN4_XbNb9xigo_zuO/view?usp=sharing" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv </span></a></li>
       </ul>
     </nav>
@@ -40,7 +40,7 @@
         <a aria-label="Mobile navbar" href="#" data-activates="slide-out" class="button-collapse"><i class="mdi mdi-menu"></i></a>
       <div class="name-title">
         <a id="name" aria-label="Navigate to the top of page" href="#" class="teal-text">Paul Bennett</a>
-        <span class="brown-text light">IT Consultant</span>
+        <span class="brown-text light">IT Professional</span>
       </div>
     </nav>
 
@@ -61,7 +61,7 @@
             class="waves-effect waves-dark orange-text"><i class="mdi mdi-school small"> </i><span> Education </span></a></li>
         <li class="bold"><a aria-label="Go to Contact section" href="#contact"
             class="waves-effect waves-dark moss-text text-lighten-1"><i class="mdi mdi-contact-mail small"> </i><span> Contact </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv (IT)" href="https://drive.google.com/file/d/1xasN6Mhc98tWZu9RY4hlfUqojtOGqYab/view?usp=sharing"target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv (IT)" href="https://drive.google.com/file/d/15D7sfsVCK_siykFnN4_XbNb9xigo_zuO/view?usp=sharing"target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv </span></a></li>
       </ul>
     </nav>
