migrate ms3 project from heroku to render

--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
                     <li><strong>Slack</strong>&nbsp; collaboration hub that connects your organization</li>
                   </ul>
                   <div class="card-action center-align">
-                    <a aria-label="View milestone2 web app" href="https://practical-python-project.herokuapp.com/"
+                    <a aria-label="View milestone2 web app" href="https://my-practical-python-website.onrender.com"
                        data-position="top" data-tooltip="View Project"
                        class=" btn-floating btn-large waves-effect waves-light tooltipped"><i class="fa fa-link"></i></a>
                     <a aria-label="View the GitHub repo for milestone1 project" href="https://github.com/bennettpe/practical-python-website"
