Update view of milestone 4 project

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
                     <li><strong>WTForms</strong>&nbsp; Web forms for python</li>
                   </ul>
                   <div class="card-action center-align">
-                    <a aria-label="View milestone 4 web app" href="https://data-centric-dev-project.herokuapp.com/"
+                    <a aria-label="View milestone 4 web app" href="https://data-centric-dev-website.onrender.com/"
                        data-position="top" data-tooltip="View Project"
                        class=" btn-floating btn-large waves-effect waves-light tooltipped"><i class="fa fa-link"></i></a>
                     <a aria-label="View the GitHub repo for milestone 4 project" href="https://github.com/bennettpe/data-centric-dev-website"
