Update view of milestone 5 project

--- a/index.html
+++ b/index.html
@@ -961,10 +961,10 @@
                     <li><strong>Stripe</strong>&nbsp; Online payment processing</li>
                   </ul>
                   <div class="card-action center-align">
-                    <a aria-label="View milestone 5 web app" href="https://fullstack-frameworks-project.herokuapp.com/"
+                    <a aria-label="View milestone 5 web app" href="https://fullstack-framework-django-website.onrender.com/"
                        data-position="top" data-tooltip="View Project"
                        class=" btn-floating btn-large waves-effect waves-light tooltipped"><i class="fa fa-link"></i></a>
-                    <a aria-label="View the GitHub repo for milestone 5 project" href="https://github.com/bennettpe/fullstack-frameworks-django-website"
+                    <a aria-label="View the GitHub repo for milestone 5 project" href="https://github.com/bennettpe/fullstack-frameworks-django-website-vscode/"
                        data-position="top" data-tooltip="View GitHub Repo"
                        class="btn-floating btn-large waves-effect waves-light tooltipped"><i class="fab fa-github"></i></a>
                   </div>
